# mkrandom

./: CMakeLists.txt  LICENSE  README.md
imgui_stdlib/: imgui_stdlib.cpp
sce_sys/livearea/contents/: template.xml
src/: context.hpp  db.cpp  db.hpp  ime_dialog.cpp  main.cpp  main.hpp  msg.cpp  msg.hpp  scenario.hpp  scenarioContext.cpp  scenarioContext.hpp  scenarioLocale.hpp  scenarioLocales.cpp  scenarioLocales.hpp  uiLocale.cpp  uiLocale.hpp  view.cpp  view.hpp  viewFactory.cpp  viewFactory.hpp
src/mainView/: mainView.cpp  mainView.hpp
src/scenarioExplorer/: scenarioExplorer.cpp  scenarioExplorer.hpp
src/scenarioView/: scenarioView.cpp  scenarioView.hpp
